Optimized thumb loading